--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -28,8 +28,8 @@
         "/api/lessons"
       ],
       "cacheConfig": {
-        "strategy": "freshness",
-        "timeout":"10s",
+        "strategy": "performance",
+        "timeout": "10s",
         "maxAge": "1d",
         "maxSize": 100
       }
